<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_vertical_margin"
    android:background="@color/white">

    <com.example.ascom.rehab.view.CustomTextView
        android:textStyle="bold"
     android:textSize="30dp"
     android:layout_centerHorizontal="true"
     android:text="@string/bill_month"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:id="@+id/TVmonth_bill"/>


    <com.example.ascom.rehab.view.CustomTextView
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:text="@string/sale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TVmonth_bill"
        android:id="@+id/TVsale"/>


    <com.example.ascom.rehab.view.CustomTextView
        android:textSize="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:textStyle="bold"
        android:text="@string/due_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TVsale"
        android:id="@+id/tv_date"/>

    <com.example.ascom.rehab.view.CustomTextView
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_toEndOf="@+id/tv_date"
        android:text="@string/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TVsale"
        android:id="@+id/tv_date_current"/>

    <com.example.ascom.rehab.view.CustomButton
        android:textColor="@color/white"
        android:background="@drawable/fill_button2"
        android:text="@string/pay_the_bill"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_centerHorizontal="true"
        android:id="@+id/pay_the_bill_Btn"
        android:layout_below="@+id/tv_date_current"
        android:layout_width="150dp"
        android:layout_height="40dp" />

    <com.example.ascom.rehab.view.CustomTextView
        android:textSize="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:text="@string/bill_condition"
        android:layout_below="@+id/pay_the_bill_Btn"
        android:id="@+id/Bill_Condition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <com.example.ascom.rehab.view.CustomTextView
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_toEndOf="@+id/Bill_Condition"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:text="@string/checking"
        android:layout_below="@+id/pay_the_bill_Btn"
        android:id="@+id/conditionTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />






</RelativeLayout>