<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
    android:padding="16dp">

        <com.example.ascom.rehab.view.CustomTextView
            android:id="@+id/usernameTV"
            android:textSize="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username" />

        <com.example.ascom.rehab.view.CustomTextView
            android:layout_toRightOf="@+id/usernameTV"
            android:id="@+id/dateTV"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date" />


    <RatingBar
        android:layout_below="@+id/usernameTV"
        style="?attr/ratingBarStyleSmall"
        android:id="@+id/rate_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/RatingBar"
        android:layout_marginTop="8dp"
        android:numStars="5"
        android:rating="3.5"
        android:stepSize="0.5" />

    <com.example.ascom.rehab.view.CustomTextView
        android:layout_below="@+id/rate_bar"
        android:id="@+id/desc_TV"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/desc"/>

</RelativeLayout>